--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,8 +6,9 @@
 @import 'global.scss';
 
 // ---- ---- fonts ---- ---- //
-@font-face {
-}
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
+// ---- ---- main ---- ---- //
 
 // ---- ---- media ---- ---- //
 @import 'media.scss';
