--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -11,7 +11,7 @@ body {
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   font-weight: 400;
-  line-height: 19px;
+  line-height: 1.3;
   color: $color_dark;
 }
 .container {
@@ -39,7 +39,7 @@ body {
 .header {
   background-color: $color_dark;
   &--main {
-    // background-color: transparent;
+    background-color: transparent;
   }
   &__inner {
     display: flex;
@@ -50,3 +50,53 @@ body {
   }
 }
 // ---- ---- footer ---- ---- //
+.footer {
+  background-color: $color_dark;
+  color: $color_light;
+  padding-top: 50px;
+  padding-bottom: 32px;
+  text-align: center;
+  &__menu {
+    display: flex;
+    justify-content: space-around;
+    text-align: left;
+    margin-bottom: 50px;
+  }
+  &__menu-list {
+    max-width: 240px;
+  }
+  &__menu-item {
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0px;
+    }
+  }
+  &__menu-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 40px;
+  }
+  &__app-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-bottom: 50px;
+  }
+  &__info-box {
+    max-width: 806px;
+    margin: 0 auto 30px;
+  }
+  &__info-text {
+    font-size: 12px;
+  }
+  &__info-phone {
+    text-decoration: underline;
+  }
+  &__policy-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+  }
+}
