--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -5,6 +5,10 @@ $color_accent: #0066ff;
 $color_grey: #e8e8e8;
 
 // ---- ---- main ---- ---- //
+html,
+body {
+  height: 100%;
+}
 body {
   min-width: 300px;
   overflow-x: hidden;
@@ -14,13 +18,27 @@ body {
   line-height: 1.3;
   color: $color_dark;
 }
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 .container {
   max-width: 1220px;
   padding: 0 10px;
   margin: 0 auto;
 }
-// ---- ---- title ---- ---- //
+.main {
+  flex-grow: 1;
+}
 
+// ---- ---- title ---- ---- //
+.title {
+  &__h1 {
+    font-size: 96px;
+    font-weight: 700;
+  }
+}
 // ---- ---- menu ---- ---- //
 .menu {
   &__items {
