--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -38,6 +38,11 @@ body {
     font-size: 96px;
     font-weight: 700;
   }
+  &__h2 {
+    font-size: 48px;
+    font-weight: 700;
+    text-align: center;
+  }
 }
 // ---- ---- menu ---- ---- //
 .menu {
