--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,7 +12,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 15;
 }
 .top {
   position: absolute;
@@ -134,6 +134,43 @@
   &__img {
     display: inline-block;
     margin-left: 90px;
+  }
+}
+.video {
+  padding-top: 150px;
+  text-align: center;
+  &__title-section {
+    margin-bottom: 20px;
+  }
+  &__sub-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 50px;
+  }
+  &__content {
+  }
+}
+.important {
+  padding: 150px 0;
+
+  &__title-section {
+    margin-bottom: 20px;
+  }
+  &__text {
+    max-width: 580px;
+    margin: 0 auto 50px;
+  }
+  &__list {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+  }
+  &__item {
+  }
+  &__img {
+    margin-bottom: 20px;
+  }
+  &__item-text {
   }
 }
 
