--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -162,6 +162,7 @@
 }
 
 // ---- ---- contacts.html ---- ---- //
+// ---- ---- contacts ---- ---- //
 .contacts {
   padding-top: 100px;
   &__title {
@@ -170,6 +171,57 @@
   &__subtitle {
     text-align: center;
     margin-bottom: 50px;
+  }
+  &__form {
+  }
+}
+// ---- ---- form ---- ---- //
+.form {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: 580px;
+  margin: 0 auto;
+  &__input {
+    display: inline-block;
+    width: 270px;
+    padding: 18px 20px;
+    margin-bottom: 50px;
+    border: 1px solid $color_accent;
+    &::placeholder {
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.3;
+      color: $color_dark;
+      opacity: 0.5;
+    }
+  }
+  &__textarea {
+    display: inline-block;
+    width: 100%;
+    height: 290px;
+    padding: 28px 20px;
+    margin-bottom: 50px;
+    border: 1px solid $color_accent;
+    resize: none;
+    &::placeholder {
+      font-family: 'Inter', sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.3;
+      color: $color_dark;
+      opacity: 0.5;
+    }
+  }
+  &__btn {
+    width: 100%;
+    max-width: 185px;
+    text-transform: uppercase;
+    background-color: $color_dark;
+    color: $color_light;
+    padding: 13px 20px;
+    margin: 0 auto;
   }
 }
 
