--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -217,6 +217,50 @@
   &__btn {
     width: 100%;
     max-width: 185px;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.3;
+    text-transform: uppercase;
+    background-color: $color_dark;
+    color: $color_light;
+    padding: 13px 20px;
+    margin: 0 auto;
+  }
+}
+// ---- ---- blog ---- ---- //
+.blog {
+  padding: 150px 0;
+  &__box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 70px;
+  }
+  &__item {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 570px;
+  }
+  &__img {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  &__title {
+    padding-right: 20px;
+  }
+  &__item-link {
+    background-color: $color_accent;
+    color: $color_light;
+    padding: 4px 20px;
+  }
+  &__link {
+    display: block;
+    width: 100%;
+    max-width: 223px;
+    text-align: center;
     text-transform: uppercase;
     background-color: $color_dark;
     color: $color_light;
