--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -161,7 +161,6 @@
   }
 }
 
-// ---- ---- contacts.html ---- ---- //
 // ---- ---- contacts ---- ---- //
 .contacts {
   padding-top: 100px;
@@ -256,16 +255,57 @@
     color: $color_light;
     padding: 4px 20px;
   }
-  &__link {
-    display: block;
-    width: 100%;
-    max-width: 223px;
+}
+
+// ---- ---- tabs and car---- ---- //
+.cars {
+  padding-top: 100px;
+  &__title {
+    margin-bottom: 50px;
+  }
+}
+.tabs {
+  &__btn {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 0 150px;
+    margin-bottom: 100px;
+  }
+  &__btn-item {
+    font-size: 24px;
+    font-weight: 700;
+  }
+  &__content {
+    margin-bottom: 70px;
+  }
+  &__content-item {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
     text-align: center;
-    text-transform: uppercase;
-    background-color: $color_dark;
-    color: $color_light;
-    padding: 13px 20px;
-    margin: 0 auto;
+  }
+  &__card {
+    border: 1px solid $color_accent;
+  }
+  &__card-img {
+    margin-bottom: 20px;
+  }
+  &__card-title {
+    margin-bottom: 20px;
+  }
+  &__card-text {
+    margin-bottom: 20px;
+  }
+  &__card-price {
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 20px;
+  }
+  &__card-link {
+    display: block;
+    color: $color_accent;
+    border-top: 1px solid $color_accent;
   }
 }
 
