--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -85,7 +85,6 @@
   &__box {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     text-align: center;
     gap: 10px;
   }
@@ -157,6 +156,7 @@
     gap: 40px;
   }
   &__img {
+    width: 100%;
     margin-bottom: 20px;
   }
 }
