--- a/app/scss/media.scss
+++ b/app/scss/media.scss
@@ -12,6 +12,14 @@
   }
 }
 @media (max-width: 860px) {
+  .title {
+    &__h1 {
+      font-size: 68px;
+    }
+    &__h2 {
+      font-size: 40px;
+    }
+  }
   .menu {
     &__btn {
       display: block;
@@ -37,6 +45,11 @@
   }
   .header__inner {
     align-items: center;
+  }
+  .top__btn {
+    max-width: 300px;
+    font-size: 28px;
+    padding: 16px;
   }
   .why {
     padding-top: 100px;
@@ -64,6 +77,153 @@
     }
     &__img {
       margin-bottom: 10px;
+    }
+  }
+}
+@media (max-width: 666px) {
+  .swiper-pagination-bullet {
+    width: 60px;
+  }
+  .swiper-pagination-horizontal.swiper-pagination-bullets
+    .swiper-pagination-bullet {
+    margin: 0 10px;
+  }
+  .video {
+    &__content {
+      height: 300px;
+    }
+  }
+  .footer {
+    &__menu {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 40px 20px;
+    }
+  }
+}
+
+@media (max-width: 540px) {
+  .title {
+    &__h1 {
+      font-size: 48px;
+    }
+    &__h2 {
+      font-size: 32px;
+    }
+    &__h4 {
+      font-size: 20px;
+    }
+  }
+  .subtitle {
+    font-size: 20px;
+  }
+
+  .header__inner {
+    padding-top: 20px;
+    padding-bottom: 25px;
+  }
+  .top {
+    padding-top: 120px;
+    .top__btn {
+      max-width: 250px;
+      font-size: 24px;
+    }
+  }
+  .how {
+    &__img {
+      margin-left: 30px;
+    }
+  }
+  .video {
+    &__content {
+      height: 250px;
+    }
+  }
+}
+@media (max-width: 440px) {
+  .how {
+    img {
+      width: 75px;
+    }
+    &__img {
+      margin-left: 0px;
+    }
+  }
+  .video {
+    &__content {
+      height: 180px;
+    }
+  }
+}
+@media (max-width: 400px) {
+  .logo {
+    img {
+      width: 60px;
+    }
+  }
+  .top {
+    padding-top: 80px;
+  }
+  .swiper-pagination-bullet {
+    width: 30px;
+  }
+  .swiper-pagination-horizontal.swiper-pagination-bullets
+    .swiper-pagination-bullet {
+    margin: 0 8px;
+  }
+  .why {
+    padding-top: 60px;
+    &__title-section {
+      margin-bottom: 30px;
+    }
+    &__img {
+      width: 100px;
+      margin-bottom: 10px;
+    }
+    &__subtitle {
+      margin-bottom: 10px;
+    }
+  }
+  .how {
+    padding-top: 60px;
+    &__box {
+      margin-bottom: 0px;
+    }
+    &__title-section {
+      margin-bottom: 30px;
+    }
+    &__subtitle {
+      margin-bottom: 30px;
+    }
+  }
+  .video {
+    padding-top: 60px;
+    &__subtitle {
+      margin-bottom: 30px;
+    }
+  }
+  .important {
+    padding: 60px 0;
+  }
+  .footer {
+    &__menu {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+    &__menu-title {
+      margin-bottom: 20px;
+    }
+    &__menu-item {
+      margin-bottom: 15px;
+    }
+    &__app-box {
+      flex-direction: column;
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+    &__policy-box {
+      flex-direction: column;
+      gap: 10px;
     }
   }
 }
