--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -31,7 +31,6 @@ body {
 .main {
   flex-grow: 1;
 }
-
 // ---- ---- title ---- ---- //
 .title {
   &__h1 {
@@ -102,7 +101,6 @@ body {
     transform: translateY(-10px) rotate(135deg);
   }
 }
-
 // ---- ---- showmore ---- ---- //
 .showmore-link {
   display: block;
@@ -176,5 +174,30 @@ body {
     justify-content: center;
     align-items: center;
     gap: 40px;
+  }
+}
+// ---- ---- 404 ---- ---- //
+.page404 {
+  position: relative;
+  padding: 200px 0 60px;
+  text-align: center;
+  &__title {
+    margin-bottom: 20px;
+  }
+  &__number {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 150px;
+  }
+  &__sorry {
+    font-size: 24px;
+  }
+  &__link {
+    color: $color_accent;
   }
 }
