new image, content and change color

--- a/app/scss/global.scss
+++ b/app/scss/global.scss
@@ -1,7 +1,7 @@
 // ---- ---- color ---- ---- //
 $color_light: #ffffff;
 $color_dark: #151515;
-$color_accent: #0066ff;
+$color_accent: #bf2233;
 $color_grey: #e8e8e8;
 
 // ---- ---- main ---- ---- //
